fix: update template editor color

--- a/packages/components/src/sender/index.less
+++ b/packages/components/src/sender/index.less
@@ -595,6 +595,8 @@
 
   .template-field {
     display: inline;
+    caret-color: var(--tr-sender-text-color);
+    color: var(--tr-sender-template-field-color);
     min-width: var(--tr-sender-template-field-min-width);
     max-width: none;
     background: var(--tr-sender-template-field-bg);
