fix: blur close pop-up modal and style issues

--- a/packages/components/src/sender/index.less
+++ b/packages/components/src/sender/index.less
@@ -338,6 +338,7 @@
       padding: var(--tr-sender-suggestion-item-padding);
       cursor: pointer;
       font-size: var(--tr-sender-suggestion-item-font-size);
+      gap: var(--tr-sender-suggestion-item-gap);
 
       &.highlighted {
         background-color: var(--tr-sender-suggestion-hover-color);
@@ -345,7 +346,7 @@
       }
 
       .suggestion-item__icon {
-        margin-right: var(--tr-sender-suggestion-item-icon-margin-right);
+        height: var(--tr-sender-suggestion-item-icon-size);
         font-size: var(--tr-sender-suggestion-item-icon-size);
         text-align: center;
       }
