--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -1,3 +1,7 @@
 .vitepress-demo-plugin__container {
   background-color: rgb(248, 248, 248);
 }
+
+.vitepress-demo-plugin__container li + li {
+  margin: 0;
+}
