fix: avoid polluting global tiny-button styles

--- a/packages/components/src/sender/index.less
+++ b/packages/components/src/sender/index.less
@@ -565,6 +565,17 @@
       }
     }
   }
+
+  /** 处理相邻按钮元素边界  */
+  .tiny-button+.tiny-button {
+    margin-left: 0;
+  }
+
+  /** 隐藏 hover 时 按钮文字下划线 */
+  .tiny-button.tiny-button.tiny-button--text:not(.is-only-icon):not(.is-icon):hover {
+    text-decoration: none;
+  }
+
 }
 
 // 模板编辑器样式
@@ -743,16 +754,6 @@
   color: var(--tr-sender-text-color-secondary);
   white-space: nowrap;
   user-select: none;
-}
-
-/** 处理相邻按钮元素边界  */
-.tiny-button + .tiny-button {
-  margin-left: 0 !important;
-}
-
-/** 隐藏 hover 时 按钮文字下划线 */
-.tiny-button.tiny-button.tiny-button--text:not(.is-only-icon):not(.is-icon):hover {
-  text-decoration: none;
 }
 
 /* 模式切换过渡动画 */
